# rust-plus-golang

./: Makefile  go.mod  go.sum  main_static.go
lib/: hello.h
lib/hello/: Cargo.toml
lib/hello/src/: lib.rs
