[package]
name = "hello"
edition = "2021"
version = "0.1.0"

[lib]
# If you only wanted dynamic library, you'd use only "cdylib".
# If you only wanted static library, you'd use only "staticlib".
# This demo shows both. See https://doc.rust-lang.org/reference/linkage.html
# for more information.
crate-type = ["cdylib", "staticlib"]

[dependencies]
libc = "0.2.2"
tokio = { version = "1.23.0", features = ["full"] }
lazy_static = "1.4.0"
